# CompGraphics2014

./: .gitignore  README.md
hws/hw0/: CMakeLists.txt  main.cpp  prog_state.cpp  prog_state.h
hws/hw0/shaders/: 0.glslfs  0.glslvs  1.glslfs  2.glslfs
hws/hw1/: CMakeLists.txt  common.h  main.cpp  prog_state.cpp  prog_state.h
hws/hw1/shaders/: 0.glslfs  0.glslvs
hws/hw2/: CMakeLists.txt  main.cpp  model.cpp  model.h  utils.h
hws/hw2/shaders/: 0.glslfs  0.glslvs  cylinder.glslfs  cylinder.glslvs  plane.glslfs  plane.glslvs
hws/hw2bumping/: CMakeLists.txt  main.cpp  shader.cpp  tiny_obj_loader.h  utils.h
hws/hw2bumping/libs/: tiny_obj_loader.cc
hws/hw2bumping/shaders/: 0.glslfs  main.fs  main.vs
hws/hw3/: CMakeLists.txt  common.h  kernel.py  main.cpp
hws/hw3/shaders/: for_filtered.fs  for_scene.fs  for_scene.vs
hws/hw30/: main.cpp  utils.h
hws/hw30/shaders/: for_filtered.fs  for_filtered.vs
